# django-address

./: .flake8  .gitignore  COPYRIGHT  Dockerfile  MANIFEST.in  README  README.md  README.rst  django-1.3.diff  django-1.7.diff  docker-compose.yml  manage.py  pyproject.toml  setup.py  test_settings.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml  publish.yml  test-pr.yml  test.yml
address/: __init__.py  admin.py  apps.py  compat.py  consistency.py  conv.py  fields.py  forms.py  hierarchy.py  kinds.py  models.py  operations.py  settings.py  signals.py  tests.py  urls.py  utils.py  views.py  widgets.py
address/djangoutils/: conv.py
address/management/commands/: checkconsistency.py  lookupaddresses.py
address/migrations/: 0001_initial.py  0002_auto_20160213_1726.py  0002_create_component.py  0002_update_locality_address_unique_contraints.py  0003_auto_20200830_1851.py  0003_convert_addresses.py  0003_convert_city_to_null.py  0004_address_extra.py  0004_finalise_version_2.py  0005_address_consistent.py  0005_address_height.py  0006_auto_20151221_0147.py
address/pythonutils/: __init__.py  conv.py  test_conv.py
address/static/address/css/: address.css
address/static/address/js/: address.js  jquery.geocomplete.js
address/static/js/: jquery.geocomplete.js  jquery.geocomplete.min.js  jquery.min.js
address/templates/address/: address.js
address/tests/: test_forms.py  test_models.py
example_site/: README.md  address  pyproject.toml  requirements.txt  tox.ini
example_site/example/: admin.py  views.py
example_site/example/fixtures/: invalid.json
example_site/example/migrations/: 0001_initial.py
example_site/example/static/css/: bootstrap.min.css
example_site/example/templates/example/: home.html
example_site/example_site/: settings.py  urls.py  wsgi.py
example_site/person/: admin.py  apps.py  forms.py  models.py  views.py
example_site/person/migrations/: 0001_initial.py  0002_auto_20200628_1720.py  0003_auto_20200628_1920.py
example_site/person/templates/example/: home.html
examples/: migrate_existing.py
examples/example_site/: address
examples/example_site/example/: forms.py  models.py  views.py
examples/example_site/example/fixtures/: valid.json
examples/example_site/example/migrations/: 0002_example_old_address.py  0003_remove_example_address.py  0004_example_address.py  0005_migrate_existing.py  0006_auto_20160110_2331.py
examples/example_site/example/templates/example/: home.html
examples/site/: manage.py
examples/site/example/: models.py  views.py
examples/site/example/migrations/: 0001_initial.py
