[tool.poetry]
name = "django-address"
version = "0.2.5"
description = "A django application for describing addresses."
authors = ["Luke Hodkinson <furious.luke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.5"
Django = ">=2.1"

[tool.poetry.dev-dependencies]
black = {version = ">=21.7b0", python = ">=3.6.2"}
flake8 = "^3.9.2"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
