[tool.poetry]
name = "example_site"
version = "0.1.0"
description = "An example site for django-address."
authors = ["Luke Hodkinson <furious.luke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
Django = ">=2.1"
django-environ = "^0.4.5"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
